added function for stopping/deactivating video iframe on modal close

--- a/src/content/docs/en/page-templates/video-page-template.mdx
+++ b/src/content/docs/en/page-templates/video-page-template.mdx
@@ -27,17 +27,17 @@ To add/remove a page from the left sidebar nav, edit the file: `src/i18n/en/nav.
 
 <VideoButton
 	text="Video Button Example"
-	videoLink="https://www.youtube.com/embed/G_YZZKgWOBQ"
+	videoLink="https://www.youtube.com/embed/kuZbgM8yxtY"
 />
 
 <VideoButton
 	text="Another Video Button Example"
-	videoLink="https://www.youtube.com/embed/l5cdI3DdSyw"
+	videoLink="https://www.youtube.com/embed/TbV7loKp69s"
 />
 
 <VideoButton
 	text="Even Another Video Button Example"
-	videoLink="https://www.youtube.com/embed/CsR4c4LKBVw"
+	videoLink="https://www.youtube.com/embed/Ac7G7xOG2Ag"
 />
 
 
