added copy describing VideoButton/VideoModal usage

--- a/src/content/docs/en/page-templates/video-page-template.mdx
+++ b/src/content/docs/en/page-templates/video-page-template.mdx
@@ -25,6 +25,8 @@ To add/remove a page from the left sidebar nav, edit the file: `src/i18n/en/nav.
 
 ## Video Modal/Popup/Lightbox
 
+These button components are set up to accept the props 'text' to control the button's text, and 'videoLink' to control what video opens in the modal.  Videos are set via these buttons, making it easy to assign when writing content.  The videos are set up to stop/deactivate when you close the modal.
+
 <VideoButton
 	text="Video Button Example"
 	videoLink="https://www.youtube.com/embed/kuZbgM8yxtY"
