set up AnnouncementButton, AnnouncementModal, and AnnouncementsContent components, updated announcements page, and getting started page

--- a/src/content/docs/en/getting-started.mdx
+++ b/src/content/docs/en/getting-started.mdx
@@ -11,10 +11,10 @@ import YouTubeEmbed from '~/components/YouTubeEmbed.astro';
 import NavBlock from '~/components/NavBlock.astro';
 import InlineGlossary from '~/components/InlineGlossary.astro';
 
-:::tip[ANNOUNCEMENTS]
+{/*:::tip[ANNOUNCEMENTS]
 **What’s new in the Grovery’s V1 Toolkit** [Find out in the announcement blog post](https://astro.build/blog/astro-2/).  
 **Ready to for your own Toolkit?** [Take our quiz to find what features are right for you?](/en/guides/upgrade-to/v2/).
-:::
+:::*/}
 
 The Grovery’s CORE RMS (Resource Management System) is a software product that provides the framework to organize, manage and train Sales and Marketing teams. This <InlineGlossary text="Progressive Web App" />&nbsp;platform provides the environment for teams to work more efficiently, share information and provides easy access to relevant program materials.
 
