--- a/src/content/docs/en/announcements.mdx
+++ b/src/content/docs/en/announcements.mdx
@@ -5,41 +5,21 @@ i18nReady: true
 type: base
 ---
 import Button from '~/components/Button.astro'
+import AnnouncementsContent from '~/components/AnnouncementsContent.astro';
 
-When editing toolkit pages, you only have to focus on the inner page content - the part you're reading right now.  Everything else like the sidebars to the left and right, or the header and footer - they're handled elsewhere for you.
+This is the main Announcements page.
 
-To make a new page, simply make a copy of this file with a new name.  The subfolder you place the file in will determine it's URL path.
 
-To add/remove a page from the left sidebar nav, edit the file: `src/i18n/en/nav.ts`
+> ## Announcements | Main
+> <AnnouncementsContent text="main" />
 
-## Toolkit pages are powered by Markdown
+## Department Announcements
 
-Markdown is sort of like Word docs for coders - everything is plain text and easily readable, plus some extra features.  Formatting like headings, lists, text treatments, etc are all done using simple things like dashes and hashtags.  You just write plain, intuitive text and the website code handles everything else for you.  No worrying about setting fonts, font sizes, colors, etc - everything is kept consistent by the website's styling code.
+> ### Department 1
+> <AnnouncementsContent text="department-1" />
 
-Markdown can be used by coders, marketers, designers, and even your clients - it's that easy! 
+> ### Department 2
+> <AnnouncementsContent text="department-2" />
 
-:::tip[ANNOUNCEMENTS]
-**Block Quote Element** - Use this element for calling out specific things.  
-:::
-
-## Basic Heading
-
-Markdown headings are automatically added to the right sidebar navigation and can be used as links.
-
-**Basic paragraph section** | Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet.
-
-Lorem ipsum dolor sit amet, consetetur sadipscing elitr, sed diam nonumy eirmod tempor invidunt ut labore et dolore magna aliquyam erat, sed diam voluptua. At vero eos et accusam et justo duo dolores et ea rebum. 
-
-Stet clita kasd gubergren, no sea takimata sanctus est Lorem ipsum dolor sit amet. 
-
-## What is a Brand Toolkit?
-
-Use your brand toolkit as a central repository for important information for your employees and your clients.  Make your toolkit the authoritative source for any resources your brand needs to get the job done.
-
-- Informational pages & articles
-- Directory pages with links to outside resources
-- Services pages with outside resources embedded into the toolkit
-- Tutorial pages for keeping employees up to date
-- Brand styleguides & assets
-- News and updates
-
+> ### Department 3
+> <AnnouncementsContent text="department-3" />
