--- a/src/content/docs/en/page-templates/tutorial-alt/step-2.mdx
+++ b/src/content/docs/en/page-templates/tutorial-alt/step-2.mdx
@@ -1,7 +1,7 @@
 ---
 type: tutorial
 unitTitle: 'Tutorial Alt Test'
-title: Tutorial Page Template
+title: New Tutorial Tracker - pt2
 description: >-
   Learn the basics of Astro with a project-based tutorial. All the background
   knowledge you need to get started!
