added new tutorial tracker to 2nd page

--- a/src/content/docs/en/page-templates/tutorial-alt/step-2.mdx
+++ b/src/content/docs/en/page-templates/tutorial-alt/step-2.mdx
@@ -13,7 +13,7 @@ import TutorialConfirmButton from '~/components/Buttons/TutorialConfirmButton.as
 <br/><br/>
 <hr/>
 <br/><br/>
-<TutorialTracker text="tutorial-1"/>
+<TutorialTrackerWrapper/>
 
 This is a test page for the new tutorial tracker system that is both more simple and more usable.
 
