--- a/src/content/docs/en/page-templates/tutorial-alt/step-2.mdx
+++ b/src/content/docs/en/page-templates/tutorial-alt/step-2.mdx
@@ -7,8 +7,12 @@ description: >-
   knowledge you need to get started!
 i18nReady: true
 ---
-import TutorialTracker from '~/components/tutorial/TutorialTracker.astro';
+import TutorialTrackerWrapper from '~/components/tutorial/TutorialTrackerWrapper.astro';
 import TutorialConfirmButton from '~/components/Buttons/TutorialConfirmButton.astro';
+import Box from '~/components/tutorial/Box.astro';
+import MultipleChoice from '~/components/tutorial/MultipleChoice.astro';
+import Option from '~/components/tutorial/Option.astro';
+import ComponentName from '~/components/ComponentName.astro';
 
 <br/><br/>
 <hr/>
