updating content to test search index

--- a/src/content/docs/en/brand-resources/icon-library.mdx
+++ b/src/content/docs/en/brand-resources/icon-library.mdx
@@ -1,6 +1,6 @@
 ---
 title: Icon Library
-description: A basic intro to Astro.
+description: The Grovery brand approved icon resources.
 i18nReady: true
 type: base
 ---
