--- a/src/content/docs/en/brand-resources/infographics.mdx
+++ b/src/content/docs/en/brand-resources/infographics.mdx
@@ -1,6 +1,6 @@
 ---
-title: Basic Page Template
-description: A basic intro to Astro.
+title: Infographics
+description: Find resources related to infographics in approved Grovery brandings.
 i18nReady: true
 type: base
 ---
