adding algolia.js indexing js indexing utility also updating simplesearch to use env variables

--- a/src/content/docs/en/brand-resources/customer-personas.mdx
+++ b/src/content/docs/en/brand-resources/customer-personas.mdx
@@ -1,6 +1,6 @@
 ---
-title: Basic Page Template
-description: A basic intro to Astro.
+title: Customer Personas
+description: The Grovery brand approved customer personas to be used in producing marketing materials.
 i18nReady: true
 type: base
 ---
