--- a/src/content/docs/en/brand-resources/print-collateral.mdx
+++ b/src/content/docs/en/brand-resources/print-collateral.mdx
@@ -1,6 +1,6 @@
 ---
-title: Basic Page Template
-description: A basic intro to Astro.
+title: Print Collateral
+description: The Grovery brand approved print collateral resources.
 i18nReady: true
 type: base
 ---
