--- a/src/content/docs/en/brand-resources/view-all.mdx
+++ b/src/content/docs/en/brand-resources/view-all.mdx
@@ -1,6 +1,6 @@
 ---
-title: Brand Resources
-description: A basic intro to Astro.
+title: View All Brand Resources
+description: List of all brand resources.
 i18nReady: true
 type: base
 ---
